added making a python script

--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -397,7 +397,269 @@ To measure length:
 5. Draw line over stem in picture  
 6. Select Analyze--> Measure
 
-###Process images with PlantCV
+## Writing Your Own Python Script
+
+There are a number of computer programming languages, C++, Java, Perl, Python, etc.. Python is a popular first programming language to learn and has a number of libraries that are useful for doing statistical analysis and image analysis.
+
+There are a number of ways to create a new file, but here is one:
+
+```
+touch /home/pi/firstpy.py
+
+```
+to open the script in a text editor
+
+```
+sudo leafpad /home/pi/firstpy.py
+
+```
+to tell the computer to run this as a python script add this top line to your script it's called a 'shebang'.
+
+```python
+#!/usr/bin/env python
+
+print "Hello World"
+print "My name is X"
+
+```
+
+save the file and close it
+
+
+## Running Your Own Python Script
+
+to run the python script you just made 
+
+```
+/home/pi/firstpy.py
+
+```
+you should see two lines print to the LXterminal.
+
+## Variables
+
+let's add to your first python script 
+
+```
+sudo leafpad /home/pi/firstpy.py
+
+```
+```python
+#!/usr/bin/env python
+
+print "Hello World"
+print "My name is X"
+
+x="My name is "
+y="Malia"
+print x+y
+
+```
+save the file and close it
+now run the file on LXterminal
+
+## Simple Fuctions
+```
+sudo leafpad /home/pi/firstpy.py
+
+```
+```python
+#!/usr/bin/env python
+
+print "Hello World"
+print "My name is X"
+
+#Variables
+x="My name is "
+y="Malia"
+print x+y
+
+#Functions
+def printme(str):
+   #This prints a passed string into this function
+   print str
+   return
+   
+#Using printme
+printme("I'm using printme to print this")
+
+def addnumbers(x,y):
+	#simple function to add numbers
+	str1= "add numbers "+str(x)+" and "+str(y)+" equqls:"
+	print str1
+	print x+y
+	return
+
+#Using addnumbers
+addnumbers(100000000,1010101)
+
+```
+**Challenge:** Write a new function that multiplies two numbers together
+
+## Using Python Libraries
+It can take a lot of work to define functions. But people have put together libraries of functions so you don't have to define everything new. To use these libraries of functions you need to import them in your scripts.
+
+let's make a new python script
+
+```
+touch /home/pi/secondpy.py
+
+```
+```
+sudo leafpad /home/pi/secondpy.py
+
+```
+```python
+#!/usr/bin/env python
+
+import numpy as np
+import cv2 
+import plantcv as pcv
+
+#once you've imported the libraries you can use them by calling them by name then by the function you want to use.
+
+#for example to read an image into a script to do math on it (remember that images are just matricies of numbers) you can use a function called imread that CV2 has.
+
+img1=cv2.imread("/home/pi/csiw_2015/outreach/sample_images/brachypodium/img1.png")
+
+img2=cv2.imread("/home/pi/csiw_2015/outreach/sample_images/brachypodium/img2.png")
+
+#Now you have variables with image data stored into it. To prove to yourself that and image is just a matrix of numbers you can print one of the images
+
+print img1
+
+#You can also print the shape of the image data
+print np.shape(img1)
+
+#You'll notice that the shape of the image has three numbers, they are height, width, and the number of channels (if it is a RGB color image, blue, green, and red channels for example)
+
+```
+save the file, close it, and run it on the command line.
+
+##Doing Math on Images
+Yesterday Abby and Robert talked about examining the changes in images. Remember that images are just matricies of numbers, so you can do math on them. Let's keep going on our second py script.
+
+```
+sudo leafpad /home/pi/secondpy.py
+
+```
+```python
+#!/usr/bin/env python
+
+import numpy as np
+import cv2 
+import plantcv as pcv
+
+img1=cv2.imread("/home/pi/csiw_2015/outreach/sample_images/brachypodium/img1.png")
+
+img2=cv2.imread("/home/pi/csiw_2015/outreach/sample_images/brachypodium/img2.png")
+
+#print img1
+
+#the CV2 function absolute difference between two images
+img3=cv2.absdiff(img1,img2)
+
+#The plantcv function print_image, prints an image out to the path
+pcv.print_image(img3,"/home/pi/plant1.jpg")
+
+#The bitwise_not function inverts an image
+img4=cv2.bitwise_not(img3)
+
+#The plantcv function print_image, prints an image out to the path
+pcv.print_image(img4,"/home/pi/plant2.jpg")
+
+```
+save, close, and run this script
+
+##User Inputs
+What if you want to have the user input information into the script instead of having the information 'hard coded' (written explicitly into the script).
+
+**For example** 
+```
+raspistill -o /home/pi/images/image1.jpg
+```
+
+In the above code the user can specify where they want to output the image with the -o flag. How can we do this in our own scripts?
+
+First let's make another python script
+
+```
+touch /home/pi/thirdpy.py
+
+```
+
+```
+sudo leafpad /home/pi/thirdpy.py
+
+```
+```python
+#!/usr/bin/env python
+
+#We need to read in an additonal library called argparse
+import argparse
+import cv2
+import plantcv as pcv
+import numpy as np
+import datetime
+
+#Then we need to define the user options we want using argparse functions
+def options():
+  parser = argparse.ArgumentParser(description="Using Argparse")
+  parser.add_argument("-i1", "--image1", help="path to image1.", required=True)
+  parser.add_argument("-i2", "--image2", help="path image2.", required=True)
+  parser.add_argument("-o", "--outdir", help="where to save the images.", required=True)
+  args = parser.parse_args()
+  return args
+
+def main():
+  # Get options
+  args = options()
+  
+  img1=cv2.imread(args.image1)
+  img2=cv2.imread(args.image2)
+
+  img3=cv2.absdiff(img2,img1)
+  
+  #Get the time to add it to the filename
+  now = datetime.datetime.now()
+  timenow=now.strftime('%m-%d-%Y_%H:%M:%S')
+  
+  #Make the file names
+  path1=str(args.outdir)+str(timenow)+".jpg"
+  path2=str(args.outdir)+str(timenow)+"_inverted.jpg"
+  
+  #Print the image
+  pcv.print_image(img3,path1)
+  
+  #Invert the image
+  img4=cv2.bitwise_not(img3)
+  
+  #Print the inverted image
+  pcv.print_image(img4,path2)
+  
+if __name__ == '__main__':
+  main()#!/usr/bin/env python
+
+```
+save, close and go back to LXterminal.
+
+##Running our third script with aruments
+
+Now that we've made a script with arguments we need to put in inputs when we run it.
+
+The script we wrote has three required inputs.  
+1.  -i1, the first image  
+2.  -i2, the second image  
+3.  -o, the path where the output images will go
+
+```
+mkdir pyimages
+
+/home/pi/thirdpy.py -i1 /home/pi/csiw_2015/outreach/sample_images/meowming/IMG_1490.JPG -i2 /home/pi/csiw_2015/outreach/sample_images/meowming/IMG_1491.JPG -o /home/pi/pyimages/
+
+```  
+
+##Process images with PlantCV
 
 [PlantCV](http://plantcv.danforthcenter.org/) is software we wrote at the Danforth Center to extract biologically meaningful information from images of plants. Go to [here](http://plantcv.danforthcenter.org/pages/documentation/function_docs/vis_tutorial.html) for detailed instructions.
 
@@ -424,7 +686,6 @@ You just processed one image, you will see a bunch of information print out to t
 If you had many images to process you would then use the "parallelization" script, which runs the 'single image script' over a bunch of images and
 then saves the data to a database. We won't be doing that today but the instructions are [here](http://plantcv.danforthcenter.org/pages/documentation/function_docs/vis_tutorial.html).
 If you had run a full set of data (many plants growing over a period of time) you could then use R to analyze the data.
-
 
 <a name="day-3"></a>
 #Day 3
