--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -485,7 +485,7 @@ printme("I'm using printme to print this")
 
 def addnumbers(x,y):
 	#simple function to add numbers
-	str1= "add numbers "+str(x)+" and "+str(y)+" equqls:"
+	str1= "add numbers "+str(x)+" and "+str(y)+" equals:"
 	print str1
 	print x+y
 	return
