Replaced leafpad with geany

--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -410,7 +410,7 @@ touch /home/pi/firstpy.py
 to open the script in a text editor
 
 ```
-sudo leafpad /home/pi/firstpy.py
+geany /home/pi/firstpy.py
 
 ```
 to tell the computer to run this as a python script add this top line to your script it's called a 'shebang'.
@@ -428,6 +428,12 @@ save the file and close it
 
 ## Running Your Own Python Script
 
+make your script executable
+
+```
+chmod ugo+x /home/pi/firstpy.py
+```
+
 to run the python script you just made 
 
 ```
@@ -441,7 +447,7 @@ you should see two lines print to the LXterminal.
 let's add to your first python script 
 
 ```
-sudo leafpad /home/pi/firstpy.py
+geany /home/pi/firstpy.py
 
 ```
 ```python
@@ -460,7 +466,7 @@ now run the file on LXterminal
 
 ## Simple Fuctions
 ```
-sudo leafpad /home/pi/firstpy.py
+geany /home/pi/firstpy.py
 
 ```
 ```python
@@ -506,7 +512,7 @@ touch /home/pi/secondpy.py
 
 ```
 ```
-sudo leafpad /home/pi/secondpy.py
+geany /home/pi/secondpy.py
 
 ```
 ```python
@@ -534,13 +540,13 @@ print np.shape(img1)
 #You'll notice that the shape of the image has three numbers, they are height, width, and the number of channels (if it is a RGB color image, blue, green, and red channels for example)
 
 ```
-save the file, close it, and run it on the command line.
+save the file, close it, and run it on the command line (don't forget to make it executable).
 
 ##Doing Math on Images
 Yesterday Abby and Robert talked about examining the changes in images. Remember that images are just matricies of numbers, so you can do math on them. Let's keep going on our second py script.
 
 ```
-sudo leafpad /home/pi/secondpy.py
+geany /home/pi/secondpy.py
 
 ```
 ```python
@@ -589,7 +595,7 @@ touch /home/pi/thirdpy.py
 ```
 
 ```
-sudo leafpad /home/pi/thirdpy.py
+geany /home/pi/thirdpy.py
 
 ```
 ```python
@@ -654,6 +660,8 @@ The script we wrote has three required inputs.
 
 ```
 mkdir pyimages
+
+chmod ugo+x /home/pi/thirdpy.py
 
 /home/pi/thirdpy.py -i1 /home/pi/csiw_2015/outreach/sample_images/meowming/IMG_1490.JPG -i2 /home/pi/csiw_2015/outreach/sample_images/meowming/IMG_1491.JPG -o /home/pi/pyimages/
 
