Changed ssh to mosh

--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -699,24 +699,26 @@ If you had run a full set of data (many plants growing over a period of time) yo
 #Day 3
 * Introduction to DNA and RNA sequencing
 * [Assembling genome sequences](#assembling-genome-sequences)
+* [Identifying variation between genome sequences](#identifying-variation-between-genome-sequences)
+* [Assembling transcript sequences](#assembling-transcript-sequences)
 
 
 ##Assembling genome sequences
 You will be using data from a high-throughput DNA sequencing technology (Illumina MiSeq) to assemble the chloroplast genome of the plant *Setaria viridis*. The read data has been pre-processed to contain reads likely to be from the chloroplast genome (only about 120 kb). You will use the Velvet genome assembly program, and as a group we will try different Kmer length settings to identify the best assembly by compiling and comparing some of the basic assembly statistics.
 
 ###Log in to the Danforth Center Bioinformatics infrastructure
-You will use the Secure Shell (ssh) program to remotely log into the Danforth Center Bioinformatics servers from your Raspberry Pi computers.
+You will use the Mobile Shell (mosh) program to remotely log into the Danforth Center Bioinformatics servers from your Raspberry Pi computers. Mosh uses Secure Shell (ssh), which we used on [Day 1](#day-1), to log into a remote server, but Mosh maintains a persistent connection even when your internet connection is intermittent.
 
 Step 1: Launch LXTerminal
 
-Step 2: Use ssh to log into the log-in server
+Step 2: Use mosh to log into the log-in server
 
  - Below the server name, user name and password are not included for security but these will be provided in class.
  - If you are asked about the RSA key fingerprint – enter yes.
  - Enter your password at the prompt.
 
 ```
-ssh username@hostname.ddpsc.org
+mosh username@hostname.ddpsc.org
 ```
 
 Setp 3: Log into one of the computing servers
@@ -724,6 +726,7 @@ Setp 3: Log into one of the computing servers
 - Server names will be provided at the workshop.
 - If you are asked about the RSA key fingerprint – enter yes.
 - Enter your password at the prompt.
+- Here we use ssh to log into the computing server because mosh keeps our connection stable from the login server.
 
 ```
 ssh hostname
@@ -802,7 +805,10 @@ When velvet completes it will provide some basic assembly statistics to the scre
 total 76437, using 1261095/1546056 reads```
 Please record the following:- Kmer used- Estimated coverage- Number of “nodes” (i.e. contigs)- N50- Max contig length- Total contig length- % of input reads assembled (i.e. 1261095/1546056 = 81.6%) 
 
-Your assembly is found in ./sviridis_chloroplast/contigs.fa
+Your assembly is found in the file ./sviridis_chloroplast/contigs.fa
+
+## Identifying variation between genome sequences
 
 
+## Assembling transcript sequences
 
