Added the variant calling section

--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -750,6 +750,30 @@ mkdir <yourname>
 # where <yourname> = your name without spaces
 ```
 
+In Linux, each user has a defined home directory, the location of which is imported into your user environment. You can see your user home folder path by entering the command:
+
+```
+echo $HOME
+```
+
+Because we are all logged in as the same user we should all see /home/csiw as our home folder. For our current session, we can temporarily change this value so that we each have our own home folders (the folders you just created). To alter the $HOME environment variable, enter the command:
+
+```
+export HOME='/home/csiw/<yourname>'
+
+# where <yourname> = your name without spaces (the directory you created)
+```
+
+Test your new home directory:
+
+```
+cd
+
+pwd
+```
+
+Entering cd without any information should move you home, and pwd should now print /home/csiw/<yourname>.
+
 ###Working with big data files
 You will use output from an Illumina MiSeq sequencer to assemble the *Setaria viridis* chloroplast genome. DNA sequence data output from Illumina and other sequencer instraments is commonly in FASTQ format. The files output from these kind of sequencing platforms can be very large (10s of gigabytes). Opening huge files can make your system unresponsive, so instead you can use a few Linux commands to get a look at these files.
 
@@ -780,9 +804,11 @@ less sviridis_1000_paired_shuffled.fastq
 ```
 
 ### Using velvet – a de Bruijn graph based genome assembler
-Keep in mind – for more info – the Velvet site is [here](http://www.ebi.ac.uk/~zerbino/velvet/). And the Velvet manual is [here](http://www.ebi.ac.uk/~zerbino/velvet/Manual.pdf).Velvet is run from the command line in two steps: **velveth** and **velvetg**.**velveth** collects the input read data and puts it in proper data structures for **velvetg**.**velvetg** builds the de Bruijn graph and processes it to generate an assembly.Each of you will run **velveth** and **velvetg** with a different kmer setting so that as a group we can identify the best assembly. When running, velvet will output text to the screen that tells you where it is in the assembly process.Before you start assembling the data make sure you are in your working directory. From wherever you are you can do that by typing:```cd /home/csiw/yourname/
+Keep in mind – for more info – the Velvet site is [here](http://www.ebi.ac.uk/~zerbino/velvet/). And the Velvet manual is [here](http://www.ebi.ac.uk/~zerbino/velvet/Manual.pdf).Velvet is run from the command line in two steps: **velveth** and **velvetg**.**velveth** collects the input read data and puts it in proper data structures for **velvetg**.**velvetg** builds the de Bruijn graph and processes it to generate an assembly.Each of you will run **velveth** and **velvetg** with a different kmer setting so that as a group we can identify the best assembly. When running, velvet will output text to the screen that tells you where it is in the assembly process.Before you start assembling the data make sure you are in your working directory. From wherever you are you can do that by typing:```cd
 
-# where yourname is the directory name you provided above
+pwd
+
+# you should now see /home/csiw/<yourname>
 ```
 
 Each of you will be assigned a Kmer and will need to adjust the commands below to match your Kmer. Kmers should range from 17 to 149 (only use odd numbers) in increments of 2 (e.g. 17, 19, 21, and so on)
@@ -808,7 +834,176 @@ total 76437, using 1261095/1546056 reads```
 Your assembly is found in the file ./sviridis_chloroplast/contigs.fa
 
 ## Identifying variation between genome sequences
+In this section you will identify variation in the DNA sequences of the chloroplast genomes of *Setaria viridis* "A10" and *S. viridis* "81-79." To identify variation, you will be aligning reads from another high-throughput, short-read shotgun sequencing dataset of *S. viridis* "81-79" to the best of the *S viridis* "A10" chloroplast assemblies we made with velvet in the section above. After aligning the reads you will process the alignment results to predict polymorphisms (Single Nucleotide Polymorphisms [SNPs] and Insertions/Deletions [INDELs]).
 
+### Overview of the programs
+#### Sequence alignment
+**bwa**: Burrows-Wheeler Aligner [https://github.com/lh3/bwa](https://github.com/lh3/bwa)* A very fast and accurate aligner optimized for relatively short HTS reads (e.g. Illumina reads)* Currently state-of-the-art* There are several other aligners that use variations of the Burrows-Wheeler algorithm (e.g. soap, bowtie)#### Alignment analysis
+**samtools**: Sequence Alignment/Map format toolkit [http://samtools.sourceforge.net](http://samtools.sourceforge.net)* A suite of tools for manipulating HTS alignment data that are in the SAM (or BAM) format* Similar suites include GATK [http://www.broadinstitute.org/gatk/](http://www.broadinstitute.org/gatk/) and seqtk [https://github.com/lh3/seqtk](https://github.com/lh3/seqtk) [seqtk is more oriented towards manipulating fasta/fastq files]
+
+### Setting up the analysisIn the genome assembly section we identified which of our velvet assemblies was the best *S. viridis* "A10" chloroplast genome and we will all use that assembly for our reference for variant detection. For simplicity let's copy our reference chloroplast assembly to each of our own folders. 
+
+Step 1, make sure you are in your own folder:
+
+```
+cd
+
+pwd
+
+# you should see /home/csiw/<yourname>
+```
+
+Setp 2, copy the reference chloroplast assembly. For example, if Malia had the best assembly we would do:
+
+```
+cp /home/csiw/maliagehan/sviridis_chloroplast/contigs.fa ./sviridis_a10_chloroplast.fasta
+```
+### Aligning *S. viridis* "81-79" DNA sequences to "A10" with bwa
+
+Step 1: create the bwa index for the reference *S viridis* "A10" chloroplast assembly
+
+```
+bwa index sviridis_a10_chloroplast.fasta
+```
+
+Step 2: align the *S viridis* "81-79" reads to the A10 reference assembly
+
+```
+bwa mem sviridis_a10_chloroplast.fasta /home/csiw/Sviridis_8179_data/Sviridis_81-79.fastq > Sviridis8179_vs_SviridisA10.sam
+```
+
+Let's pause to take a look at the output SAM file:
+
+```
+less Sviridis8179_vs_SviridisA10.sam
+```
+
+### Processing the bwa alignment
+Step 3: convert the alignment SAM file to BAM format (SAM is in ASCII plain text, BAM is binary [compressed])
+
+```
+samtools view -bS Sviridis8179_vs_SviridisA10.sam -o Sviridis8179_vs_SviridisA10.bam
+```
+
+Step 4: sort the BAM file
+
+```
+samtools sort Sviridis8179_vs_SviridisA10.bam Sviridis8179_vs_SviridisA10.sorted
+
+# Outputs a file called Sviridis8179_vs_SviridisA10.sorted.bam
+```
+
+Step 5: index the sorted BAM file
+
+```
+samtools index Sviridis8179_vs_SviridisA10.sorted.bam
+```
+
+### Identify variation between A10 and 81-79 using samtools
+Step 1: index our reference chloroplast genome sequence
+
+```
+samtools faidx sviridis_a10_chloroplast.fasta
+```
+
+Step 2: convert the sorted BAM-format alignment to binary call format (BCF)
+
+```
+samtools mpileup -ugf sviridis_a10_chloroplast.fasta Sviridis8179_vs_SviridisA10.sorted.bam | \
+bcftools view -bvcg - > Sviridis8179_vs_SviridisA10.bcf
+```
+
+Step 3: convert the BCF file to variant call format (VCF) and quality filter the results
+
+```
+bcftools view Sviridis8179_vs_SviridisA10.bcf | vcfutils.pl varFilter -D 10000 > Sviridis8179_vs_SviridisA10.vcf
+```
+
+Examine the results
+
+```
+less Sviridis8179_vs_SviridisA10.vcf
+```
+
+**Note the format of the vcf file:**
+
+* The lines starting with "#" are comment lines – provide useful info about the rest of the file* The result lines are tab-delimited (tabs between fields)
+
+```CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO…contig1	463	.	A	G	222		.		DP=76;VDB=0.0313;AF1=1;AC1=2;DP4=0,0,28,42;MQ=37;FQ=-238…
+```
+
+### Exploring the results
+
+You can browse the *S. viridis* "81-79" read alignments against the *S. viridis* "A10" chloroplast reference assembly in your terminal
+
+```
+samtools tview Sviridis8179_vs_SviridisA10.sorted.bam sviridis_a10_chloroplast.fasta
+```
+
+Summarize the number of INDELs detected
+
+```
+cat contigs.vcf | grep -v "#" | grep "INDEL" | wc -l
+```
+
+Summarize the number of SNPs
+
+```
+cat contigs.vcf | grep -v "#" | grep -v "INDEL” | wc –l
+``` 
+
+Let's copy the VCF file to our Raspberry Pi computers so we can graph some summary data more easily. You will need the IP address of your Raspberry Pi. We will use Secure Copy (scp).
+
+```
+scp Sviridis8179_vs_SviridisA10.vcf pi@<your IP address>
+
+# where <your IP address> = the address of your eth0 network device
+```
+
+Open a new terminal tab in LXTerminal so that we can keep our connection to the server active. We will use the R programming environment to plot data.
+
+```
+R
+```
+
+You are now in an R console in your terminal. Read the VCF file into R, limit the table to the first six columns and add column names:
+
+```r
+vars = read.table(file="Sviridis8179_vs_SviridisA10.vcf", header=FALSE, sep="\t")
+
+vars = vars[,1:6]
+
+colnames(vars) = c("chrom","pos", "id", "ref", "alt", "qual")
+```
+
+Plot a histogram of variant call quality scores:
+
+```r
+hist(vars$qual)
+```
+
+Create a barplot of nucleotide frequencies for both *S. viridis* types:
+
+```r
+ntfreqs = data.frame(refA=nrow(vars[vars$ref == 'A',]),
+              refT=nrow(vars[vars$ref == 'T',]),
+              refG=nrow(vars[vars$ref == 'G',]),
+              refC=nrow(vars[vars$ref == 'C',]),
+              altA=nrow(vars[vars$alt == 'A',]),
+              altT=nrow(vars[vars$alt == 'T',]),
+              altG=nrow(vars[vars$alt == 'G',]),
+              altC=nrow(vars[vars$alt == 'C',])
+              )
+
+barplot(as.matrix(ntfreqs))
+```
+
+To quit R:
+
+```
+quit()
+```
 
 ## Assembling transcript sequences
+
 
