Added the RNA-seq assembly section

--- a/csiw_2015.md
+++ b/csiw_2015.md
@@ -923,6 +923,8 @@ Examine the results
 
 ```
 less Sviridis8179_vs_SviridisA10.vcf
+
+# Remember use "q" to quit
 ```
 
 **Note the format of the vcf file:**
@@ -1000,10 +1002,131 @@ barplot(as.matrix(ntfreqs))
 
 To quit R:
 
-```
+```r
 quit()
 ```
 
 ## Assembling transcript sequences
+In this section you will be assembling Illumina RNA-seq data from an unknown plant. The read data has been quality trimmed and filtered. You will vary the Kmer length used by Velvet and compile some of the basic assembly statistics in order to select a single “best” assembly to use for the remaining BLAST analysis.
 
+### Prepare your files
+Make sure you are in your home directory
 
+```
+cd
+
+pwd
+
+# You should still see /home/csiw/<yourname>
+```
+
+Each of you will be assigned one of seven files of unknown origin. Create a directory for your RNA-seq assemblies and move there:
+
+```
+mkdir rnaseq
+
+cd rnaseq
+```
+
+Instead of having to refer back to your assigned fastq data file, and to avoid having to customize commands below, you can create a symbolic link to your data file that also gives it an alias so that you can refer to it by another name. We will create a link to your data file in the rnaseq directory. For unknown1 as an example:
+
+```
+ln -s /home/csiw/rnaseq_data_2015/unknown1.fastq unknown.fastq
+```
+
+If you list the files now you will see something like below that indicates that you have a link called unknown.fastq that points to the actual file.
+
+```
+ls -l
+
+lrwxrwxrwx 1 csiw classroom 42 Jul 21 23:13 unknown.fastq -> /home/csiw/rnaseq_data_2015/unknown1.fastq
+```
+
+### Use Velvet to assemble your RNA-seq data
+We want to try a few Kmer settings, below are example commands with k = 95.
+
+Run velveth
+```
+velveth k95 95 -fastq -shortPaired unknown.fastq 
+```
+
+Then run velvetg
+
+```
+velvetg k95 -cov_cutoff auto -ins_length 300 -min_contig_lgth 152 -exp_cov auto
+```
+
+Try running both commands with a few Kmer settings. The recommended Kmer range to try is 17 to 149 (only use odd numbers) in whatever increments you like. Remember to specify both a different output directory (e.g. k95 above) and a different Kmer setting (e.g. 95 above).
+
+After testing Kmers, choose an optimal Kmer for the rest of the exercise, you will need to choose one assembly to work with. When you pick an assembly, change to the assembly directory, for example:
+
+```
+cd k95
+```
+
+### Identify your unknown organism
+Use **less** to scan through the contigs. Look for a relatively long contig that fits entirely within your screen.
+
+```
+less contigs.fa
+```
+
+Use your cursor to highlight that contig including the fasta header and copy it. Example:
+
+```
+>NODE_3_length_1770_cov_60.711300
+AAAACAGTGTGATTATTACTAAATGTAACGATATACAAAACAAATTCAAAATCTTTAAAT
+CACACAACACCAACACCAACACCACTTGGTTTAATCATAACAATGAAGAACATAAACAAG
+AATCCTTAAAATGACCTAGGTTTAGCTACAATGGTAGAGTGCTTCAAGATATGCAAACTA
+AACTGCCCACCTTTCTCATCGGTATTGATCTTAGACTGTCCCGGTGGAGGCAACAGCTCG
+AAATTCTGCACCAAACGCCCGATTGTAATACCAAGTATCGGCAATGCAAGAATAATCCCA
+GGGCAACTCCTTCTCCCGACTCCAAACGGTAAGTACCTAAAGTCATTCCCGTTAGCCTCA
+ACCTTCGCTTCCTCTTCCAAAAACCTCTCTGGCCTAAACTCCTCGGGTTTCTTCCATTGG
+TCGGGGTTGTTTGCTAGCCACCACGCGTTGACCAAGATCTTGCTTTCGGCTGGGATGTCA
+AACCCGCCGAGCTTAGCGTCATGAAGGTTCATGTGTGGGACTAGAAGCGGGATTGCCATA
+CGAAGACGGAGGGTTTCCTTGATCACGGCTTGGAGGTAAGGGAGGTTTTGGACGTCCGGC
+TCGGTGATCTGGACACCGGGCCCGAGTTTGGTGTCGAGCTCGTGCCTGAGCTTGGCTTGG
+ATCTCGGGATGGTTAACTAGCTCCGCAATTCCCCATTCGATCGACCATAGAGTTGTCTCG
+ATTGCTGCAACATTGATGTTTTCAACAATGTAAAGAACATTGTCTTCATTGATCTCACCC
+TTCTCTTTAGCTTCAAGAATATGATCAATGGCACATTTCAACTGATTATTGTCCATTTTC
+TTAGTGCTTCCAATCTTCTTCCTTTCGTCAACGAAGTAATCCTTGAAGAGCTGAATCCTC
+TTGTCTTTAACTTCCTTACACAATTTCAAATAGTTTCTCAAAAACGGCCGCAAAATAGGG
+ATGAAATCGCCATAGTTGTACTCAAAGCTCTGCGCCAAACGACTCCTCTCACCGTTCAAC
+GCCTTGAGTTTCAAAAACAAGGGATCATCTTCACTTTCGAATCGTCTGTCGAACATGATT
+CTGAACATGTTGTTATACATCATGAGTTGTAACCGTCTTCGGATCACGATTCCTTCAGTT
+GCTGCAGCCGGATTCTTCTTCACATCGTCCACAACCGCCGCAGCCTCAGCCTCCCACCCA
+TACCTGTATTGCTGAACAACTTTGTTGGTGAAAAACGGTACGGTCATGATCCTCCTCATC
+TTCCTCCAATGCTCACCATAAACCGTAAACACCATATCCTGACCCTTCCCAGTAAAAATA
+TCGAACACAACATTCCTTGTTCTCGAACCAAACTCAACTCCTTGTGTATGCAACACCTCT
+TTCGCCAGCTCAGGCGAAGACACAACAACCAGGTTCCTCTGCCCCATGCGTAGCAGCAAG
+ATCTCACCAAACCTTTTAGCCAGATCGGTTAAGTTCCGGTGGTTCAAATCATCGCCAACT
+TGTAACCAGTTGCCGAAAATTGGAACCGGGATTGGGCCAGGTGGGAGCTTGAATTTTTTA
+CCGCGGAGTTTGGAGATTATTATTGCGCCGATAATGGCGGCGAATAAGGCGACGAGGGTT
+TTTTCTATGAGGAGGAGGTCCATGGTGGGTTGTGGTGGTTGGTTACGGTGGTGGTGTTGT
+GATTTTTGGAGAATGATGGGAGGTTTTATAGGGGTGACGGATGGGGTTAGGTGGAGTGAT
+GGACGGAGGGGAGTTGGTCAGATGGGAAATGGGTGACGGCGTTAGCCAAGTTTGACGGTG
+AAGTGTGCAAGTTTGGTTTTTTGTGTGTTATTATATGAATTCAGTTATGCAAAGGTTATg
+tcat
+```
+
+####Use BLASTN to compare your nucleotide sequence to an online database of nucleotide sequences
+* Open [http://blast.ncbi.nlm.nih.gov/Blast.cgi](http://blast.ncbi.nlm.nih.gov/Blast.cgi) using your browser
+* Click on "nucleotide blast"
+* Paste your sequence into the query sequence box
+* Select database -> Others (nr etc.): Nucleotide collection (nr/nt)
+* Select Optimize -> Somewhat similar sequences (blastn)
+* Click BLAST
+* Wait for results
+* Record info about the top few hits, for example the species and sequence description, query coverage, E-value, max identity, etc.
+
+####Use BLASTP to compare your putative protein sequence to an online database of protein sequences
+You currently have the nucleotide sequence of a transcript. Many transcripts encode proteins and searching for similarity between proteins can be more sensitive than nucleotide searches. We will use a program to predict the amino acid sequence of any putative proteins our transcript can encode.
+
+#####Extract the longest open reading frame (ORF) within the transcript contig
+* Open [http://www.ncbi.nlm.nih.gov/gorf/orfig.cgi](http://www.ncbi.nlm.nih.gov/gorf/orfig.cgi) using your browser* Paste your transcript contig into the box and click "OrfFind"* Click on the largest green box on the resulting graphic* Click "Accept"* Change the pulldown menu to "3 Fasta protein"* Click View* Copy the resulting protein sequence corresponding to the ORF you selected
+
+#####Run BLASTP on the protein sequence from the longest ORF
+* Open [http://blast.ncbi.nlm.nih.gov/Blast.cgi](http://blast.ncbi.nlm.nih.gov/Blast.cgi) using your browser
+* Click on "protein blast"* Paste your sequence into the query sequence box* Leave database selection on "Non-redundant protein sequences (nr)"* Leave algorithm selection on "blastp"* Click "BLAST"* Wait for results* Record info about the top few hits, for example the species and sequence description, query coverage, E-value, max identity, etc.If you want, repeat this process for several contigs.
+
+What species do you think you had?
